--- a/src/app/views/dashboard-symbol/dashboard-symbol.component.html
+++ b/src/app/views/dashboard-symbol/dashboard-symbol.component.html
@@ -13,39 +13,39 @@
 
         <h6 class="text-muted mt-3"> Stock Universe</h6>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="" [(ngModel)]="nifty50">
           <label class="form-check-label" for="flexCheckDefault">
             Nifty 50
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="" [(ngModel)]="niftyit">
           <label class="form-check-label" for="flexCheckDefault">
             Nifty IT
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="" [(ngModel)]="niftybank">
           <label class="form-check-label" for="flexCheckDefault">
             Nifty Bank
           </label>
         </div>
 
         <h6 class="text-muted mt-3"> Industry</h6>
-        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-          <option selected>Select Industry</option>
+        <select class="form-select form-select-sm" aria-label=".form-select-sm example" [(ngModel)]="industry">
+          <option value="" selected>Select Industry</option>
           <option *ngFor="let item of industryList" value="{{item?.industry}}">{{item?.industry}}</option>
         </select>
 
         <h6 class="text-muted mt-3"> Score</h6>
-        <input type="input" class="form-control form-control-sm">
+        <input type="input" class="form-control form-control-sm" [(ngModel)]="score">
 
         <h6 class="text-muted mt-3"> Delivery( {{deliveryPercent}}%)</h6>
-        <input type="range" min="1" max="100" class="form-range" id="deliverypercent" (change)="rangeUpdate($event)"
-          value="{{deliveryPercent}}">
+        <input type="range" min="1" max="100" class="form-range" (change)="rangeUpdate($event)"
+          [(ngModel)]="deliveryPercent">
 
         <h6 class="text-muted mt-3"> Avg Total Score</h6>
-        <input type="input" class="form-control form-control-sm">
+        <input type="input" class="form-control form-control-sm" [(ngModel)]="avgTotalScore">
 
       </div>
     </div>
@@ -53,7 +53,7 @@
   <div class="col-md-9">
     <div class="table-responsive">
       <table class="table caption-top">
-        <caption>Details as on Trading date <b>{{topList[0].TRADING_DATE|date:'dd, MMM, yyyy'}}</b></caption>
+        <caption>Details as on Trading date <b>{{topList[0]?.TRADING_DATE|date:'dd, MMM, yyyy'}}</b></caption>
         <thead>
           <tr>
             <th scope="col">#</th>
