--- a/src/app/views/dashboard-symbol/dashboard-symbol.component.html
+++ b/src/app/views/dashboard-symbol/dashboard-symbol.component.html
@@ -13,39 +13,39 @@
 
         <h6 class="text-muted mt-3"> Stock Universe</h6>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="" [(ngModel)]="nifty_50">
           <label class="form-check-label" for="flexCheckDefault">
             Nifty 50
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="" [(ngModel)]="nifty_it">
           <label class="form-check-label" for="flexCheckDefault">
             Nifty IT
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="" [(ngModel)]="nifty_bank">
           <label class="form-check-label" for="flexCheckDefault">
             Nifty Bank
           </label>
         </div>
 
         <h6 class="text-muted mt-3"> Industry</h6>
-        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-          <option selected>Select Industry</option>
+        <select class="form-select form-select-sm" aria-label=".form-select-sm example" [(ngModel)]="industry">
+          <option value="" selected>Select Industry</option>
           <option *ngFor="let item of industryList" value="{{item?.industry}}">{{item?.industry}}</option>
         </select>
 
         <h6 class="text-muted mt-3"> Score</h6>
-        <input type="input" class="form-control form-control-sm">
+        <input type="input" class="form-control form-control-sm" [(ngModel)]="score">
 
         <h6 class="text-muted mt-3"> Delivery( {{deliveryPercent}}%)</h6>
         <input type="range" min="1" max="100" class="form-range" id="deliverypercent" (change)="rangeUpdate($event)"
-          value="{{deliveryPercent}}">
+        [(ngModel)]="deliveryPercent">
 
         <h6 class="text-muted mt-3"> Avg Total Score</h6>
-        <input type="input" class="form-control form-control-sm">
+        <input type="input" class="form-control form-control-sm" [(ngModel)]="avgtotalscore">
 
       </div>
     </div>
