add spline chart and update symbol details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,55 +22,10 @@
     </nav>
     <div class="row">
       <div class="d-flex flex-column flex-shrink-0 bg-light col-md-2 " style="width: 4.5rem;">
-        <a href="/" class="d-block p-3 link-dark text-decoration-none" title="" data-bs-toggle="tooltip"
-          data-bs-placement="right" data-bs-original-title="Icon-only">
-          <svg class="bi" width="40" height="32">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-          <span class="visually-hidden">Icon-only</span>
-        </a>
-        <ul class="nav nav-pills nav-flush flex-column mb-auto text-center d-none">
-          <li class="nav-item">
-            <a href="#" class="nav-link active py-3 border-bottom" aria-current="page" title="" data-bs-toggle="tooltip"
-              data-bs-placement="right" data-bs-original-title="Home">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-range-fill" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2h16a2 2 0 0 0-2-2H2zM0 8V3h16v2h-6a1 1 0 1 0 0 2h6v7a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-4h6a1 1 0 1 0 0-2H0z"/>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right"
-              data-bs-original-title="Dashboard">
-              <svg class="bi" width="24" height="24" role="img" aria-label="Dashboard">
-                <use xlink:href="#speedometer2"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right"
-              data-bs-original-title="Orders">
-              <svg class="bi" width="24" height="24" role="img" aria-label="Orders">
-                <use xlink:href="#table"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right"
-              data-bs-original-title="Products">
-              <svg class="bi" width="24" height="24" role="img" aria-label="Products">
-                <use xlink:href="#grid"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right"
-              data-bs-original-title="Customers">
-              <svg class="bi" width="24" height="24" role="img" aria-label="Customers">
-                <use xlink:href="#people-circle"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+         
+          <!-- Sidebar -->
+          
+        <!-- End of Sidebar -->
          
       </div>
       <div class="col-md-10">
